--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
+    <script src="https://kit.fontawesome.com/5dc0840e04.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -25,15 +26,19 @@
 
             <div class="textfield">
                 <label for="usuario">Email:</label>
-                <input type="email" name="Email" placeholder="Email" class="inputs required">
+                <input type="email" name="Email" placeholder="Email" class="inputs required" oninput="emailValidate()">
+                <span class="span-required">Digite um email válido</span>
+
             </div>
 
             <br>
 
             <div class="textfield">
                 <label for="senha">Senha:</label>
-                <input id="input" type="password" name="password" placeholder="Senha" class="inputs required">
+                <input id="input" type="password" name="password" placeholder="Senha" class="inputs required" oninput="mainPasswordValidate()">
                 <i id="visible" class="fas fa-eye-slash" aria-hidden="true"></i>
+                <span class="span-required">Digite uma senha com pelo menos 8 caracteres</span>
+
                 <br>
             </div>
 
@@ -41,8 +46,9 @@
 
             <div class="textfield">
                 <label for="senha"> Repita sua Senha:</label>
-                <input id="input" type="password" name="password" placeholder="Senha" class="inputs required">
-                <i id="visible" class="fas fa-eye-slash" aria-hidden="true"></i>
+                <input id="input" type="password" name="password" placeholder="Senha" class="inputs required" oninput="comparePassword()">
+                <span class="span-required">Senhas deve, ser compativeis</span>
+
                 <br>
             </div>
 
