--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
     <script src="https://kit.fontawesome.com/5dc0840e04.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="icon" href="./src/img/icon.png">
+    <title>Form Validação </title>
 </head>
 
 <body>
